--- a/config/database.yml
+++ b/config/database.yml
@@ -22,3 +22,10 @@ test:
 
 production:
   url: <%= ENV['DATABASE_URL'] %>
+  adapter: postgresql
+  encoding: unicode
+  #database: app_dev
+  pool: 5
+  #username: username
+  #password: password
+  #host: localhost
