--- a/test/fixtures/statuses.yml
+++ b/test/fixtures/statuses.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  status: MyString
+  name: MyString
 
 two:
-  status: MyString
+  name: MyString
